Adapted help text.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <h2>Equalize Team Ratings</h2>
 <t1>Written by Bernhard Strasser ([o.p.]kanalratte). Version 0.1. Feel free to use or reuse this html & javascript code.</t1><br>
 <t1>Usage: 1) Define player per match and team, maximum rating metric, and maximum shown matches. 2) Add players to each team.</t1><br>
-<t1>3) Select players who need to play in the next match by left-clicking them.</t1><br>
-<t1>4) Select players who must not play in the next match by right-clicking them. 5) Press "Start Calculation".</t1><br>
+<t1>3) Choose a metric for finding fair teams. Match "average ratings": Minimize average rating difference of both teams; "individual rating": Minimize the difference between the best players of </t1><br>
+<t1>both teams, the second best, etc. So a 2000 and 1000 Elo player will not likely be matched with two 1500 Elo players. "Both": Mean of both metrics.</t1><br>
+<t1>4) Select players who need to play in the next match by left-clicking them.</t1><br>
+<t1>5) Select players who must not play in the next match by right-clicking them. 6) Press "Start Calculation".</t1><br>
 <br>
 <br>
 <br>
